[FLINK-38020] Fix NPE in NonTimeRangeUnboundedFunction (#26807)
- Fix NPE by setting accumulators after creation